--- a/LojaQuadrinhos.DataAccess/LojaQuadrinhos.DataAccess.csproj
+++ b/LojaQuadrinhos.DataAccess/LojaQuadrinhos.DataAccess.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LojaQuadrinhos.Models\LojaQuadrinhos.Models.csproj" />
+  </ItemGroup>
+
 </Project>
