added connection string to appsettings.json

--- a/LojaQuadrinhosWeb/appsettings.json
+++ b/LojaQuadrinhosWeb/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LojaQuadrinhos": "Data Source=ARQUIAO4\\NAVDEMO;Initial Catalog=LojaQuadrinhos;Integrated Security=True"
+  }
 }
