--- a/LojaQuadrinhos.BLL/LojaQuadrinhos.BLL.csproj
+++ b/LojaQuadrinhos.BLL/LojaQuadrinhos.BLL.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LojaQuadrinhos.DataAccess\LojaQuadrinhos.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
