--- a/LojaQuadrinhosWeb/LojaQuadrinhosWeb.csproj
+++ b/LojaQuadrinhosWeb/LojaQuadrinhosWeb.csproj
@@ -15,7 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LojaQuadrinhos.DataAccess\LojaQuadrinhos.DataAccess.csproj" />
+    <ProjectReference Include="..\LojaQuadrinhos.BLL\LojaQuadrinhos.BLL.csproj" />
+    <ProjectReference Include="..\LojaQuadrinhosValuu.IoC\LojaQuadrinhosValuu.IoC.csproj" />
   </ItemGroup>
 
 </Project>
