--- a/LojaQuadrinhos.Models/LojaQuadrinhos.Models.csproj
+++ b/LojaQuadrinhos.Models/LojaQuadrinhos.Models.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="microsoft.aspnetcore.identity.entityframeworkcore" Version="5.0.6" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
   </ItemGroup>
 
