--- a/LojaQuadrinhosWeb/LojaQuadrinhosWeb.csproj
+++ b/LojaQuadrinhosWeb/LojaQuadrinhosWeb.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.6" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.6" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="3.8.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.6">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -22,6 +24,13 @@
   <ItemGroup>
     <ProjectReference Include="..\LojaQuadrinhos.BLL\LojaQuadrinhos.BLL.csproj" />
     <ProjectReference Include="..\LojaQuadrinhosValuu.IoC\LojaQuadrinhosValuu.IoC.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Views\Quadrinho\Index.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
